# Quang

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
crates/quang-core/: Cargo.toml
crates/quang-core/src/: agent.rs  cost.rs  job.rs  lib.rs  policy.rs  task.rs  types.rs  weight_serde.rs  workflow.rs
crates/quang-hub-app/: Cargo.toml
crates/quang-hub-app/src/: lib.rs  main.rs  router.rs
crates/quang-hub-app/src/pages/: mod.rs
crates/quang-hub-cloud/: Cargo.toml
crates/quang-hub-cloud/src/: lib.rs
crates/quang-hub-meet/: Cargo.toml  PLAN.md
crates/quang-hub-meet/docs/: ARCHITECTURE.md
crates/quang-hub-meet/src/: chat.rs  event.rs  hub.rs  lib.rs  media.rs  participant.rs  recording.rs  room.rs
crates/quang-hub-meet/src/server/: durable_object.rs  mod.rs  recording.rs  turns.rs
crates/quang-hub-meet/src/server/handlers/: mod.rs  room_handlers.rs  signaling_handlers.rs
crates/quang-hub-meet/src/web/: mod.rs
crates/quang-hub-meet/src/web/components/: in_call_chat.rs  media_controls.rs  meeting_info_panel.rs  mod.rs  participant_bar.rs  screen_share_overlay.rs  video_grid.rs  video_tile.rs
crates/quang-hub-meet/src/web/pages/: meet_home.rs  meet_room.rs  meet_schedule.rs  mod.rs
crates/quang-hub-meet/src/web/webrtc/: mod.rs
crates/quang-hub-repo/: Cargo.toml  PLAN.md
crates/quang-hub-repo/docs/: ARCHITECTURE.md
crates/quang-hub-repo/src/: lib.rs  linked_repo.rs  q_task.rs  repo_app.rs  repo_branch.rs  repo_commit.rs  repo_event.rs  repo_file.rs  repo_settings.rs
crates/quang-hub-repo/src/server/: deploy.rs  github_client.rs  mod.rs  webhook.rs
crates/quang-hub-repo/src/server/handlers/: mod.rs  proxy.rs  repo_crud.rs
crates/quang-hub-repo/src/web/: mod.rs
crates/quang-hub-repo/src/web/components/: code_line.rs  commit_list.rs  diff_view.rs  file_tree.rs  file_viewer.rs  link_repo_dialog.rs  mod.rs  qtask_board.rs  repo_app_viewer.rs  repo_card.rs  repo_search_bar.rs
crates/quang-hub-repo/src/web/pages/: mod.rs  repo_browse.rs  repo_detail.rs  repo_home.rs  repo_new.rs  repo_tasks.rs
crates/quang-hub-sdk/: Cargo.toml
crates/quang-hub-ts/: Cargo.toml
crates/quang-hub-ts/src/: lib.rs
crates/quang-hub-workplace/: Cargo.toml  PLAN.md
crates/quang-hub-workplace/docs/: ARCHITECTURE.md
crates/quang-hub-workplace/src/: actor.rs  agent.rs  audit.rs  channel.rs  chat.rs  compensation.rs  contract.rs  event.rs  goal.rs  graph.rs  hub.rs  human.rs  lib.rs  project.rs  review.rs  skill.rs  summary.rs  task.rs  team.rs  view.rs  worklog.rs  workspace.rs
crates/quang-hub-workplace/src/server/: auth.rs  graphql.rs  mod.rs  routes.rs  store.rs  worker.rs
crates/quang-hub-workplace/src/server/handlers/: channel.rs  chat.rs  goal.rs  mod.rs  project.rs  review.rs  summary.rs  task.rs  team.rs  workspace.rs
crates/quang-hub-workplace/src/views/: chart.rs  gantt.rs  kanban.rs  mod.rs  table.rs
crates/quang-hub-workplace/src/web/: mod.rs
crates/quang-hub-workplace/src/web/components/: agent_chat_panel.rs  agent_design_panel.rs  agent_goal_panel.rs  agent_task_panel.rs  channel_list.rs  chat_panel.rs  goal_progress.rs  kanban_column.rs  mod.rs  project_card.rs  task_card.rs  team_card.rs  workspace_card.rs
crates/quang-hub-workplace/src/web/pages/: channel_view.rs  goal_board.rs  login.rs  mod.rs  review_board.rs  task_board.rs  welcome.rs  workspace_dashboard.rs
crates/quang-shai-ao/: Cargo.toml
crates/quang-shai-ao/src/: lib.rs
crates/quang-web/: Cargo.toml
crates/quang-web/src/: app.rs  auth.rs  client.rs  event.rs  lib.rs  router.rs
crates/quang-web/src/components/: app_shell.rs  avatar.rs  loading.rs  mod.rs  sidebar.rs  topbar.rs
crates/quang-web/src/graphql/: mod.rs  schema.rs
crates/quang-web/src/hooks/: mod.rs  use_auth.rs
docs/: PLAN-Workplace-Collab.md  PLAN-Workplace-Identity-Economics.md  PLAN.md
docs/design/: Ecosystem Quang Fractal Fluid Hyper.md  Quang Web Framework.md  QuangHubRepo Design Overview.md
docs/ideas/: RsTs AI Programming Language.md  i2c Ecosystem Incentives.md
public/: styles.css
