[package]
name = "quang-hub-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "quang-hub-app"
path = "src/main.rs"

[dependencies]
# Dioxus
dioxus = { version = "0.6", features = ["web", "router", "signals"] }
dioxus-web = "0.6"
dioxus-router = "0.6"
dioxus-signals = "0.6"

# Serde
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"

# Web
web-sys = { version = "0.3", features = ["console", "Storage", "Window", "Location", "EventSource", "MessageEvent", "Document", "HtmlHeadElement", "HtmlStyleElement", "Element", "Node"] }

# Tracing
tracing.workspace = true
tracing-wasm = "0.2"

# Quang crates — enable web features
quang-web = { path = "../quang-web" }
# Web features disabled for now — subcrate components need Dioxus 0.6 API fixes
# quang-hub-workplace = { path = "../quang-hub-workplace", features = ["web"] }
# quang-hub-meet = { path = "../quang-hub-meet", features = ["web"] }
# quang-hub-repo = { path = "../quang-hub-repo", features = ["web"] }
quang-hub-workplace = { path = "../quang-hub-workplace" }
quang-hub-meet = { path = "../quang-hub-meet" }
quang-hub-repo = { path = "../quang-hub-repo" }
