[package]
name = "quang-hub-repo"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[dependencies]
# Core
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
indexmap.workspace = true

# Workplace dependency
quang-hub-workplace = { path = "../quang-hub-workplace" }

# Dioxus (web components)
dioxus = { version = "0.6", features = ["web", "router", "signals"], optional = true }
dioxus-web = { version = "0.6", optional = true }
dioxus-router = { version = "0.6", optional = true }
dioxus-signals = { version = "0.6", optional = true }

# Server / Cloudflare Workers
worker = { version = "0.4", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

# Git / repo operations
git2 = { version = "0.19", optional = true }

# Shared web components
quang-web = { path = "../quang-web" }

[features]
default = []
web = ["dioxus", "dioxus-web", "dioxus-router", "dioxus-signals"]
server = ["worker", "reqwest", "git2"]
full = ["web", "server"]
