[package]
name = "quang-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[dependencies]
# Dioxus — UI framework (replaces Yew)
dioxus = { version = "0.6", features = ["web", "router", "signals"] }
dioxus-web = "0.6"
dioxus-router = "0.6"
dioxus-signals = "0.6"

# Serde
serde.workspace = true
serde_json.workspace = true

# Async (wasm-compatible)
wasm-bindgen-futures = "0.4"

# HTTP / Auth (wasm-compatible: uses browser fetch API)
web-sys = { version = "0.3", features = ["console", "Storage", "Window", "Location", "EventSource", "MessageEvent", "Request", "Response", "RequestInit", "Headers"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

# Event bus
tracing.workspace = true

[features]
default = []
